--- a/src/core/config.json
+++ b/src/core/config.json
@@ -1,7 +1,7 @@
 {
   "specifications": {
     "author": "Ygor Simões (@ygorsimoes)",
-    "version": "1.0",
+    "version": "5.0-stable",
     "github": "https://github.com/ygorsimoes/Heimdall",
     "email": "contato.ygorsimoes@gmail.com"
   },
