--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
 language: python
-python:
-  - 3.9
+jobs:
+    include:
+        - python: 3.3
+          dist: trusty
+        - python: 3.6
+          dist: trusty
+        - python: 3.8
+          dist: trusty
+        - python: 3.9
+          dist: trusty
+        - python: nightly
+          dist: bionic
+git:
+    depth: 1
 install:
   - pip3 install -r requirements.txt
 script:
-  - python3.9 heimdall.py --url http://testphp.vulnweb.com/
+  - python3 heimdall.py --url http://testphp.vulnweb.com/
