Code refactoring and minor changes
- Changes to README.md
- New classes were created
- Folder relocations
- Removed useless files and folders

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Run a Heimdall!
         run: |
-          ./heimdall.py --url http://testphp.vulnweb.com/ -w 1
+          python3 heimdall.py --url http://testphp.vulnweb.com/ -w 1
