--- a/src/core/config.json
+++ b/src/core/config.json
@@ -1,7 +1,7 @@
 {
   "specifications": {
     "author": "Ygor Simões (@ygorsimoes)",
-    "version": "5.1-stable",
+    "version": "5.2.3.9-beta",
     "github": "https://github.com/ygorsimoes/Heimdall",
     "email": "contato.ygorsimoes@gmail.com"
   },
